@@ -2,51 +2,45 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>io.mosip</groupId>
-		<artifactId>commons</artifactId>
-		<version>1.0.6</version>
-	</parent>
-
-	<version>1.0.6</version>
+	<version>1.2.0-SNAPSHOT</version>
 	<groupId>io.mosip.kernel</groupId>
 	<artifactId>kernel-parent</artifactId>
 	<packaging>pom</packaging>
 	<name>kernel</name>
 	<description>Parent project of MOSIP Kernel</description>
 
-	<properties>
+<properties>		
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
 		<!-- maven -->
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
-		<maven.compiler.version>3.7.0</maven.compiler.version>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
+		<maven.compiler.version>3.8.0</maven.compiler.version>
+		<maven.surefire.plugin.version>2.22.0</maven.surefire.plugin.version>
+
 		<maven.jar.plugin.version>3.0.2</maven.jar.plugin.version>
 		<maven.war.plugin.version>3.1.0</maven.war.plugin.version>
-		<maven.surefire.plugin.version>2.9</maven.surefire.plugin.version>
 		<maven.jacoco.plugin.version>0.8.1</maven.jacoco.plugin.version>
 		<maven.sonar.plugin.version>3.7.0.1746</maven.sonar.plugin.version>
-		<maven.javadoc.version>3.0.1</maven.javadoc.version>
+		<maven.javadoc.version>3.2.0</maven.javadoc.version>
 		<maven-shade-plugin.version>2.3</maven-shade-plugin.version>
 
-		<!-- spring -->
+		<!--  spring 
 		<spring.boot.version>2.0.2.RELEASE</spring.boot.version>
 		<spring.data.jpa.version>2.0.7.RELEASE</spring.data.jpa.version>
 		<spring.security.test.version>5.0.5.RELEASE</spring.security.test.version>
-		<spring-cloud-config.version>2.0.0.RELEASE</spring-cloud-config.version>
-                
-		<!-- swagger -->
+		<spring-cloud-config.version>2.0.4.RELEASE</spring-cloud-config.version>            
+		swagger
 		<swagger.core.version>2.0.7</swagger.core.version>
 		<swagger.annotations.version>1.5.21</swagger.annotations.version>
 		<springfox.version>2.9.2</springfox.version>
                 
-		<!-- vertx -->
+		vertx
 		<vertx.version>3.6.2</vertx.version>
 		<vertx.health.check.version>3.7.0</vertx.health.check.version>
 
 
-		<!-- javax -->
+		javax
 		<javax.interceptor.version>1.2</javax.interceptor.version>
 		<javax.el-api.version>3.0.0</javax.el-api.version>
 		<javax.transaction.api.version>1.3</javax.transaction.api.version>
@@ -54,7 +48,7 @@
 		<javax.validation-api.version>2.0.1.Final</javax.validation-api.version>
 		<glassfish.javax.el>2.2.6</glassfish.javax.el>
 
-		<!-- data -->
+		data
 		<h2.version>1.4.197</h2.version>
 		<mysql.connector.version>5.1.46</mysql.connector.version>
 		<postgresql.version>42.2.2</postgresql.version>
@@ -62,19 +56,19 @@
 		<hibernate.version>5.2.17.Final</hibernate.version>
 		<hibernate.validator.version>6.0.12.Final</hibernate.validator.version>
 
-		<!-- test -->
+		test
 		<junit.version>4.12</junit.version>
-		<mockito.version>1.10.19</mockito.version>
+		<mockito.version>2.23.4</mockito.version>
 		<powermock.version>1.7.4</powermock.version>
-		<powermock.beta.version>2.0.0-beta.5</powermock.beta.version>
+		<powermock.beta.version>2.0.7</powermock.beta.version>
 
-		<!-- logger -->
+		logger
 		<logback.version>1.2.3</logback.version>
 		<slf4j.version>1.7.19</slf4j.version>
 		<log4j-over-slf4j>1.7.7</log4j-over-slf4j>
 		<jcl.to.slf4j.version>1.7.25</jcl.to.slf4j.version>
 
-		<!-- json -->
+		json
 		<jackson.version>2.9.5</jackson.version>
 		<jackson.datatype.version>2.9.8</jackson.datatype.version>
 		<jackson.databind>2.9.6</jackson.databind>
@@ -83,7 +77,7 @@
 		<json.version>20180813</json.version>
 		<jsonsimple.version>1.1.1</jsonsimple.version>
 
-		<!-- utilities -->
+		utilities
 		<commons-math3>3.6.1</commons-math3>
 		<commons-lang3>3.7</commons-lang3>
 		<commons-io>2.6</commons-io>
@@ -104,11 +98,11 @@
 		<velocity.tool.version>2.0</velocity.tool.version>
 		<datamapper.orika>1.5.2</datamapper.orika>
 		<modelmapper.version>2.1.1</modelmapper.version>
-		<bouncycastle.version>1.60</bouncycastle.version>
+		<bouncycastle.version>1.66</bouncycastle.version>
 		<icu4j.version>63.1</icu4j.version>
 		<seventeam-otp.version>1.0.0</seventeam-otp.version>
 		<google.zxing.version>3.3.3</google.zxing.version>
-		<hadoop-client>2.8.1</hadoop-client>
+		<hadoop-client>3.1.0</hadoop-client>
 		<htrace-core4>4.1.0-incubating</htrace-core4>
 		<aws.javasdk.version>1.11.368</aws.javasdk.version>
 		<s3mock.version>0.2.4</s3mock.version>
@@ -120,7 +114,7 @@
 		<aspectjweaver.version>1.8.12</aspectjweaver.version>
 		<micrometer.core.version>1.4.2</micrometer.core.version>
 		<micrometer.registry.prometheus.version>1.4.2</micrometer.registry.prometheus.version>
-
+ -->
 
 
 		<sonar.coverage.exclusions>**/constant/**,**/config/**,**/httpfilter/**,**/cache/**,**/dto/**,**/entity/**,**/model/**,**/exception/**,**/repository/**,**/security/**,**/*Config.java,**/*BootApplication.java,**/*VertxApplication.java,**/cbeffutil/**,**/*Utils.java,**/*Validator.java,**/*Helper.java,**/verticle/**,**/VidWriter.java/**,**/masterdata/utils/**,**/spi/**,**/core/http/**,"**/LocationServiceImpl.java","**/RegistrationCenterMachineServiceImpl.java","**/RegistrationCenterServiceImpl.java","**/pridgenerator/**","**/idgenerator/prid","**/proxy/**","**/cryptosignature/**"</sonar.coverage.exclusions>
@@ -149,9 +143,9 @@
 		<module>kernel-idvalidator-mispid</module>
 		<module>kernel-pinvalidator</module>
 		<module>kernel-virusscanner-clamav</module>
-		<module>kernel-keygenerator-bouncycastle</module>
+		<!-- <module>kernel-keygenerator-bouncycastle</module>
 		<module>kernel-crypto-jce</module>
-		<module>kernel-keymanager-softhsm</module>
+		<module>kernel-keymanager-softhsm</module>  -->
 		<module>kernel-templatemanager-velocity</module>
 		<module>kernel-pdfgenerator-itext</module>
 		<module>kernel-datamapper-orika</module>
@@ -165,8 +159,10 @@
 		<module>kernel-idobjectvalidator</module>
 		<module>kernel-bioapi-provider</module>
 		<module>kernel-smsserviceprovider-msg91</module>
-        	<module>kernel-fsadapter-proxy</module>
+        <module>kernel-fsadapter-proxy</module>
 		<module>kernel-registration-packet-manager</module>
+		<module>kernel-authcodeflowproxy-api</module>
+		<module>kernel-websubclient-api</module>
 
 		<module>kernel-masterdata-service</module>
 		<module>kernel-auditmanager-service</module>
@@ -182,30 +178,8 @@
 		<module>kernel-salt-generator</module>
 		<module>kernel-biometrics-api</module>
 		<module>kernel-biosdk-provider</module>
+		<module>object-store</module>
 	</modules>
-
-	<dependencies>
-	    <dependency>
-			<groupId>io.micrometer</groupId>
-			<artifactId>micrometer-core</artifactId>
-			<version>${micrometer.core.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>io.micrometer</groupId>
-			<artifactId>micrometer-registry-prometheus</artifactId>
-			<version>${micrometer.registry.prometheus.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>jul-to-slf4j</artifactId>
-			<version>${jcl.to.slf4j.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>jcl-over-slf4j</artifactId>
-			<version>${jcl.to.slf4j.version}</version>
-		</dependency>
-	</dependencies>
 
 	<build>
 		<pluginManagement>
@@ -217,6 +191,9 @@
 					<configuration>
 						<skipTests>${skipTests}</skipTests>
 						<skip>false</skip>
+						<argLine>
+							--illegal-access=permit
+						</argLine>
 					</configuration>
 				</plugin>
 				<plugin>
@@ -241,6 +218,9 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-javadoc-plugin</artifactId>
 					<version>${maven.javadoc.version}</version>
+					<configuration>
+           				<doclint>none</doclint>
+       				</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -310,8 +290,19 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>${maven.javadoc.version}</version>
 				<configuration>
 					<aggregate>true</aggregate>
+					<doclint>none</doclint>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${maven.compiler.version}</version>
+				<configuration>
+					<source>${maven.compiler.source}</source>
+					<target>${maven.compiler.target}</target>
 				</configuration>
 			</plugin>
 		</plugins>
